about update: added princeton visit

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Tobias Hartl"
   avatar           : "profile.png"
-  bio              : "Research Associate at the University of Regensburg and the Institute for Employment Research (IAB) Nuremberg"
+  bio              : "Postdoc in Econometrics @ University of Regensburg and IAB Nuremberg; Visiting Postdoc @ Princeton University"
   location         : FALSE
   employer         : 
   pubmed           : FALSE
