--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Tobias Hartl"
   avatar           : "profile.png"
-  bio              : "Postdoc in Econometrics @ University of Regensburg and IAB Nuremberg"
+  bio              : "Assistant Professor (tenure track) of Econometrics @ Maastricht University"
   location         : FALSE
   employer         : 
   pubmed           : FALSE
   googlescholar    : FALSE
-  email            : "tobias1.hartl@ur.de"
+  email            : "tobias.hartl@maastrichtuniversity.nl"
   researchgate     :  FALSE
   uri              :
   bitbucket        :
